Source/WebCore/platform/network/soup/ResourceResponseSoup.cpp
@@ -63,7 +63,20 @@ void ResourceResponse::updateFromSoupMessage(SoupMessage* soupMessage)
     m_url = soupURIToKURL(soup_message_get_uri(soupMessage));
 
     m_httpStatusCode = soupMessage->status_code;
+    setHTTPStatusText(soupMessage->reason_phrase);
 
+    m_soupFlags = soup_message_get_flags(soupMessage);
+
+    GTlsCertificate* certificate = 0;
+    soup_message_get_https_status(soupMessage, &certificate, &m_tlsErrors);
+    m_certificate = certificate;
+
+    updateFromSoupMessageHeaders(soupMessage->response_headers);
+}
+
+void ResourceResponse::updateFromSoupMessageHeaders(const SoupMessageHeaders* messageHeaders)
+{
+    SoupMessageHeaders* headers = const_cast<SoupMessageHeaders*>(messageHeaders);
     SoupMessageHeadersIter headersIter;
     const char* headerName;
     const char* headerValue;
@@ -72,7 +85,7 @@ void ResourceResponse::updateFromSoupMessage(SoupMessage* soupMessage)
     // thus, we need to clear old header values and update m_httpHeaderFields from soupMessage headers.
     m_httpHeaderFields.clear();
 
-    soup_message_headers_iter_init(&headersIter, soupMessage->response_headers);
+    soup_message_headers_iter_init(&headersIter, headers);
     while (soup_message_headers_iter_next(&headersIter, &headerName, &headerValue)) {
         String headerNameString = String::fromUTF8WithLatin1Fallback(headerName, strlen(headerName));
         HTTPHeaderMap::const_iterator it = m_httpHeaderFields.find(headerNameString);
@@ -87,10 +100,8 @@ void ResourceResponse::updateFromSoupMessage(SoupMessage* soupMessage)
         }
     }
 
-    m_soupFlags = soup_message_get_flags(soupMessage);
-
     String contentType;
-    const char* officialType = soup_message_headers_get_one(soupMessage->response_headers, "Content-Type");
+    const char* officialType = soup_message_headers_get_one(headers, "Content-Type");
     if (!m_sniffedContentType.isEmpty() && m_sniffedContentType != officialType)
         contentType = m_sniffedContentType;
     else
@@ -98,13 +109,7 @@ void ResourceResponse::updateFromSoupMessage(SoupMessage* soupMessage)
     setMimeType(extractMIMETypeFromMediaType(contentType));
     setTextEncodingName(extractCharsetFromMediaType(contentType));
 
-    setExpectedContentLength(soup_message_headers_get_content_length(soupMessage->response_headers));
-    setHTTPStatusText(soupMessage->reason_phrase);
-    setSuggestedFilename(filenameFromHTTPContentDisposition(httpHeaderField("Content-Disposition")));
-
-    GTlsCertificate* certificate = 0;
-    soup_message_get_https_status(soupMessage, &certificate, &m_tlsErrors);
-    m_certificate = certificate;
-}
+    setExpectedContentLength(soup_message_headers_get_content_length(headers));
+    setSuggestedFilename(filenameFromHTTPContentDisposition(httpHeaderField("Content-Disposition")));}
 
 }
